Adding more data structure problem